--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
@@ -14,8 +15,9 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <div id= "roomSelect">Rooms</div>
       <!-- Your HTML goes here! -->
-    </div>
     <div id="chats"></div>
+    </div>
   </body>
 </html>
