First commit of the day.... at 4 o clock.... finished all of the basic requirements

--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,24 @@
   </head>
   <body>
     <div id="main">
-      <h1>chatterbox</h1>
-      <div id= "roomSelect">Rooms</div>
+      <h1><img src = images/logo.png></h1>
+      <div id= "roomSelect"><ul></ul>
+      </div>
       <!-- Your HTML goes here! -->
-    <div id="chats"></div>
+    <div id="chat area">
+      <div id = "textarea">
+        <h3>Message</h3>
+        <input type = "textbox" class = 'messageInput'></input>
+        <br>
+        <button class = "messageButton">Submit</button>
+        <h3>
+          Room
+        </h3>
+        <input type = "text" class = 'roomInput'></div>
+      </div>
+      <div id = "chats"></div>
+      <br>
+    </div>
     </div>
   </body>
 </html>
