Add CSS and buttons and better functionality

--- a/client/index.html
+++ b/client/index.html
@@ -21,13 +21,13 @@
     <div id="chat area">
       <div id = "textarea">
         <h3>Message</h3>
-        <input type = "textbox" class = 'messageInput'></input>
+        <input type = "textbox" class = 'messageInput' placeholder = "Enter text here!"></input>
         <br>
         <button class = "messageButton">Submit</button>
         <h3>
           Room
         </h3>
-        <input type = "text" class = 'roomInput'></div>
+        <input type = "text" class = 'roomInput' placeholder = "Create a new room!"></div>
       </div>
       <div id = "chats"></div>
       <br>
